--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   publish_docs:
+    if: false
     name: Build the docs using Sphinx and push to gh-pages
     runs-on: ubuntu-latest
     env:
